src/objects/FMP_Follow_up__c.object
<CustomObject>
    <fields>
        <fullName>followUpusingControlMethodsForPYE__c</fullName>
        <formula>IF(TEXT( usingControlMethodsForPYE__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpusingControlMethodsForPYE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpusingNativeSpeciesAsShading__c</fullName>
        <formula>IF( UsingNativeSpeciesAsShading__c&gt; 50 , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpusingNativeSpeciesAsShading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpwarehouseSafety__c</fullName>
        <formula>IF(TEXT(warehouseSafety__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpwarehouseSafety</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpwastewaterManagement__c</fullName>
        <formula>IF( INCLUDES( WastewaterManagement__c, &quot;Las vierte en pozos de infiltración&quot;) = TRUE || INCLUDES( WastewaterManagement__c, &quot;Planta de tratamiento de aguas mieles&quot;) = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpwastewaterManagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpwetmillSafety__c</fullName>
        <formula>IF( INCLUDES( WetmillSafety__c, &quot;Aprobado para la certificación&quot;) = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpwetmillSafety</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpwetmillWaterManagement__c</fullName>
        <formula>IF( INCLUDES( WetmillWaterManagement__c, &quot;La utiliza como modo de fertilización&quot;) = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpwetmillWaterManagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>followUpzarandaGoodCondition__c</fullName>
        <formula>IF(TEXT(zarandaGoodCondition__c ) = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followUpzarandaGoodCondition</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>harvestEvaluation__c</fullName>
        <label>harvestEvaluation</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>harvestRecord__c</fullName>
        <label>harvestRecord</label>
        <picklist>
            <picklistValues>
                <fullName>Adecuadamente identificado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Con documentación/registros de soporte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adecuadamente separado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hay adecuadas medidas de trazabilidad</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>hasProtectionEquipment__c</fullName>
        <label>hasProtectionEquipment</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>honeyWaterTreatmentTank__c</fullName>
        <label>honeyWaterTreatmentTank</label>
        <picklist>
            <picklistValues>
                <fullName>Las vierte en fuente de agua sin tratar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las vierte en pozos de infiltración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escurrimiento superficial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planta de tratamiento de aguas mieles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La utiliza como modo de fertilización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>identifyingErodedAreas__c</fullName>
        <label>identifyingErodedAreas</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>implemetationSeedbedPlan__c</fullName>
        <label>implemetationSeedbedPlan</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>knowledgeAreasLots__c</fullName>
        <label>knowledgeAreasLots</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>makingMonitoringPestsDiseases__c</fullName>
        <label>makingMonitoringPestsDiseases</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>monitoringRecordPestDisease__c</fullName>
        <label>monitoringRecordPestDisease</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>percentTargetsComplete__c</fullName>
        <formula>targetsComplete1__c/totalTargets1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Targets Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>postControlEvaluation__c</fullName>
        <label>postControlEvaluation</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>properCoffeeStorage__c</fullName>
        <label>properCoffeeStorage</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>properSubstratesPreparation__c</fullName>
        <label>properSubstratesPreparation</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pulpCompostingPit__c</fullName>
        <label>pulpCompostingPit</label>
        <picklist>
            <picklistValues>
                <fullName>La escurre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La protege de la lluvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procesa en compost en cuanto es posible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lo vende sin procesar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La amontona sin protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lo vierte al río</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La bota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>pulpingMachineOk__c</fullName>
        <label>pulpingMachineOk</label>
        <picklist>
            <picklistValues>
                <fullName>Granos enteros y limpios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granos quebrados o mordidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tira pulpa con el grano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tira grano con la pulpa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presenta otro daño o defecto</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>recordHarvesting__c</fullName>
        <label>recordHarvesting</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>recordOfLabor__c</fullName>
        <label>recordOfLabor</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>recordPesticideApplications__c</fullName>
        <label>recordPesticideApplications</label>
        <picklist>
            <picklistValues>
                <fullName>Fecha de aplicación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No registra ningún dato</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>recordPurchasingInputs__c</fullName>
        <label>recordPurchasingInputs</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>recordSalesCPS__c</fullName>
        <label>recordSalesCPS</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>recordVarietiesTreesPerLot__c</fullName>
        <label>recordVarietiesTreesPerLot</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>reforestationNativeSpecies__c</fullName>
        <label>reforestationNativeSpecies</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>registrationWorkPerLot__c</fullName>
        <label>registrationWorkPerLot</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>separationCoffeePerLot__c</fullName>
        <label>separationCoffeePerLot</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>separationCoffeeQuality__c</fullName>
        <label>separationCoffeeQuality</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>tanksMucilageRemoverOk__c</fullName>
        <label>tanksMucilageRemoverOk</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>targetsComplete1__c</fullName>
        <label>Targets Complete 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>targetsComplete2__c</fullName>
        <label>Targets Complete 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>targetsComplete3__c</fullName>
        <label>Targets Complete 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalTargets1__c</fullName>
        <label>Total Targets 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalTargets2__c</fullName>
        <label>Total Targets 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalTargets__c</fullName>
        <formula>totalTargets1__c+totalTargets2__c</formula>
        <label>Total Targets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trainsStaffAgrochemicalsHandling__c</fullName>
        <label>trainsStaffAgrochemicalsHandling</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>useProtectionEquipment__c</fullName>
        <label>useProtectionEquipment</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>usingControlMethodsForPYE__c</fullName>
        <label>usingControlMethodsForPYE</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>warehouseSafety__c</fullName>
        <label>warehouseSafety</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zarandaGoodCondition__c</fullName>
        <label>zarandaGoodCondition</label>
        <picklist>
            <picklistValues>
                <fullName>Cumple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>FMP Follow up</label>
    <nameField>
        <displayFormat>FMPFU-{000000}</displayFormat>
        <label>FMP Follow up Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FMP Follow ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>